// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CAlert renders correctly 1`] = `
<div
  appear="true"
  aria-atomic="true"
  aria-live="polite"
  class="c-alert c-alert-dismissible c-alert-primary"
  role="alert"
>
  <button
    aria-label="Close"
    class="c-close"
    type="button"
  >
    ×
  </button>
   Dismissible Alert!
</div>
`;

exports[`CAlert renders correctly 2`] = `
<div
  appear="true"
  aria-atomic="true"
  aria-live="polite"
  class="c-alert c-alert-dismissible c-alert-success"
  name="fade"
  role="alert"
>
  <button
    aria-label="Close"
    class="c-close"
    type="button"
  >
    ×
  </button>
   Dismissible Alert!
</div>
`;
